# notion-cli-rs

./: .env.example  .gitignore  Cargo.toml  README.md  install.sh
src/: config.rs  lib.rs  main.rs  notion.rs
tests/: integration_tests.rs
