[package]
name = "notion-cli"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI tool for managing Notion tasks"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
dotenv = "0.15"
dirs = "5.0"
async-trait = "0.1"
colored = "2.1"

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"
pretty_assertions = "1.4"
