[package]
name = "notion-cli-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <charlondev@gmail.com>"]
description = "A CLI tool for managing Notion tasks"

[lib]
name = "notion_cli_rs"
path = "src/lib.rs"

[[bin]]
name = "notion-cli-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full", "test-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
dotenv = "0.15"
dirs = "5.0"
async-trait = "0.1"
colored = "2.1"
lazy_static = "1.4"
env_logger = "0.10"

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"
pretty_assertions = "1.4"
lazy_static = "1.4"
